filled table of database,list view

--- a/GameStore.Domain/GameStore.Domain.csproj
+++ b/GameStore.Domain/GameStore.Domain.csproj
@@ -76,6 +76,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\IGameRepository.cs" />
+    <Compile Include="Concrete\EFDbContext.cs" />
+    <Compile Include="Concrete\EFGameRepository.cs" />
     <Compile Include="Entities\Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
