--- a/GameStore.WebUI/Web.config
+++ b/GameStore.WebUI/Web.config
@@ -54,4 +54,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="EFDbContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=GameStore;Integrated Security=True"
+         providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
