--- a/GameStore.WebUI/Views/Web.config
+++ b/GameStore.WebUI/Views/Web.config
@@ -16,6 +16,8 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
+        <add namespace="GameStore.WebUI"/>
+        <add namespace="GameStore.WebUI.HtmlHelpers"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
