navigation,cart were added

--- a/GameStore.Domain/GameStore.Domain.csproj
+++ b/GameStore.Domain/GameStore.Domain.csproj
@@ -78,6 +78,8 @@
     <Compile Include="Abstract\IGameRepository.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Concrete\EFGameRepository.cs" />
+    <Compile Include="Entities\Cart.cs" />
+    <Compile Include="Entities\CartLine.cs" />
     <Compile Include="Entities\Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
