--- a/GameStore.UnitTests/GameStore.UnitTests.csproj
+++ b/GameStore.UnitTests/GameStore.UnitTests.csproj
@@ -94,6 +94,7 @@
     <Compile Include="CartTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTest1.cs" />
+    <Compile Include="AdminTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
